Alignment issue with task's menu options going to 2 lines in Edge browser

--- a/src/client/flogo/packages/diagram/tiles/tile-task.component.less
+++ b/src/client/flogo/packages/diagram/tiles/tile-task.component.less
@@ -95,6 +95,10 @@
   display: flex;
 }
 
+.menu-options {
+  display: flex;
+}
+
 .menu__icon {
   padding: 2px 4px;
   margin-left: 5px;
